--- a/abaco-chines.html
+++ b/abaco-chines.html
@@ -158,8 +158,11 @@
                             <div class="col-1">
                                 <a href="#" class="btn btn-primary" onclick="calcular();">Calcular</a>
                             </div>
-                            <div class="col-10">
+                            <div class="col-8">
                                 <h5 class="mt-2" id="tot"></h5>
+                            </div>
+                            <div class="col-2 text-end">
+                                <a href="index.html" class="btn btn-secondary">Regressar</a>
                             </div>
                         </div>
                     </div>
