--- a/abaco-simples.html
+++ b/abaco-simples.html
@@ -199,8 +199,11 @@
                             <div class="col-1">
                                 <a href="#" class="btn btn-primary" onclick="s_calcular();">Calcular</a>
                             </div>
-                            <div class="col-10">
+                            <div class="col-8">
                                 <h5 class="mt-2" id="s_tot"></h5>
+                            </div>
+                            <div class="col-2 text-end">
+                                <a href="index.html" class="btn btn-secondary">Regressar</a>
                             </div>
                         </div>
                     </div>
