--- a/abaco-chines.html
+++ b/abaco-chines.html
@@ -152,21 +152,15 @@
                     </div>
                     <div class="card-footer">
                         <div class="row">
-                            <div class="col-1">
-                                <a href="#" class="btn btn-secondary" onclick="limpar();">Limpar</a>
-                            </div>
-                            <div class="col-1">
-                                <a href="#" class="btn btn-primary" onclick="calcular();">Calcular</a>
-                            </div>
-                            <div class="col-8">
+                            <div class="col d-flex">
+                                <a href="#" class="btn btn-secondary me-2" onclick="limpar();">Limpar</a>
+                                <a href="#" class="btn btn-primary me-3" onclick="calcular();">Calcular</a>
                                 <h5 class="mt-2" id="tot"></h5>
-                            </div>
-                            <div class="col-2 text-end">
-                                <a href="index.html" class="btn btn-secondary">Regressar</a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <a href="index.html" class="btn btn-secondary mt-3">Regressar</a>
             </div>
         </div>
     </main>
