--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <p class="text-center mt-3" style="width: 320px;">dzccreations</p>
+                <p class="text-center mt-3" style="width: 320px;">dzrrcreations</p>
             </div>
         </div>
     </main>
