--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </div>
         <div class="row">
             <div class="col">
+                <a class="btn btn-primary mt-1" href="adicao.html" style="width: 320px;">Adição</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <p class="text-center mt-3" style="width: 320px;">dzrrcreations</p>
             </div>
         </div>
