--- a/adicao.html
+++ b/adicao.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="bootstrap-5.1.3-dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style-adicao.css" />
 
     <title>Adição</title>
 </head>
@@ -16,58 +16,52 @@
                 <div class="card">
                     <h3 class="card-header border-light">Adição</h3>
                     <div class="card-body">
-                        <div class="row">
-                            <div class="col-2"><label for="minParcela1" class="form-label">Mínimo da Parcela 1</label></div>
-                            <div class="col-2"><label for="maxParcela1" class="form-label">Máximo da Parcela 1</label></div>
-                            <div class="col-2"></div>
-                            <div class="col-2"><label for="parcela1" class="form-label">Parcela 1</label></div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-2">
+                        <div class="row mb-3 ">
+                            <div class="form-floating col-xl-2 col-md-3 mb-3">
                                 <input type="number" class="form-control" id="minParcela1" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Mínimo valor escolhido aleatoriamente para a Parcela 1 (entre 0 e 99)">
+                                <label for="minParcela1">&nbsp&nbsp Mín. Parcela 1</label>
                             </div>
-                            <div class="col-2">
+                            <div class="form-floating col-xl-2 col-md-3 mb-3">
                                 <input type="number" class="form-control" id="maxParcela1" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Máximo valor escolhido aleatoriamente para a Parcela 1 (entre 0 e 99)">
+                                <label for="maxParcela1">&nbsp&nbsp Máx. Parcela 1</label>
                             </div>
-                            <div class="col-2">
-                                <button type="button" class="btn btn-primary" id="gerarParcela1" onclick="gerarParcela1();">Gerar Parcela 1</button>
+                            <div class="col-xl-2 col-md-3 mb-3">
+                                <button type="button" class="btn btn-primary w-100" id="gerarParcela1" onclick="gerarParcela1();">Gerar Parcela 1</button>
                             </div>
-                            <div class="col-2">
+                            <div class="form-floating col-xl-2 col-md-3 mb-3">
                                 <input type="number" class="form-control" id="parcela1" min="0" max="99" 
                                        onclick="preencherParcela1();" onchange="avaliarLimites();" onkeyup="preencherParcela1();"
                                        title="Valor escolhido para a Parcela 1 (entre 0 e 99)">
+                                <label for="maxParcela1">&nbsp&nbsp Parcela 1</label>
                             </div>
                         </div>
                         
-                        <div class="row">
-                            <div class="col-2"><label for="minParcela2" class="form-label">Mínimo da Parcela 2</label></div>
-                            <div class="col-2"><label for="maxParcela2" class="form-label">Máximo da Parcela 2</label></div>
-                            <div class="col-2"></div>
-                            <div class="col-2"><label for="parcela2" class="form-label">Parcela 2</label></div>
-                        </div>
                         <div class="row mb-3">
-                            <div class="col-2">
+                            <div class="form-floating col-xl-2 col-md-3 mb-3">
                                 <input type="number" class="form-control" id="minParcela2" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Mínimo valor escolhido aleatoriamente para a Parcela 2 (entre 0 e 99)">
+                                <label for="minParcela2">&nbsp&nbsp Mín. Parcela 2</label>
                             </div>
-                            <div class="col-2">
+                            <div class="form-floating col-xl-2 col-md-3 mb-3">
                                 <input type="number" class="form-control" id="maxParcela2" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Máximo valor escolhido aleatoriamente para a Parcela 2 (entre 0 e 99)">
+                                <label for="minParcela2">&nbsp&nbsp Máx. Parcela 2</label>
                             </div>
-                            <div class="col-2">
-                                <button type="button" class="btn btn-primary" id="gerarParcela" onclick="gerarParcela2();">Gerar Parcela 2</button>
+                            <div class="col-xl-2 col-md-3 mb-3">
+                                <button type="button" class="btn btn-primary w-100" id="gerarParcela2" onclick="gerarParcela2();">Gerar Parcela 2</button>
                             </div>
-                            <div class="col-2">
+                            <div class="form-floating col-xl-2 col-md-3 mb-3">
                                 <input type="number" class="form-control" id="parcela2" min="0" max="99" 
                                        onclick="preencherParcela2();" onchange="avaliarLimites();" onkeyup="preencherParcela2();"
                                        title="Valor escolhido para a Parcela 2 (entre 0 e 99)">
+                                <label for="maxParcela2">&nbsp&nbsp Parcela 2</label>
                             </div>
                         </div>
 
                         <div class="row justify-content-center">
-                            <div class="col-2">
+                            <div class="col-xl-2 col-md-3">
                                 <table class="table table-striped mb-3 mt-3" id="adicao">
                                     <tbody class="w-auto">
                                         <tr style="height: 44px;">
