--- a/adicao.html
+++ b/adicao.html
@@ -16,21 +16,21 @@
                 <div class="card">
                     <h3 class="card-header border-light">Adição</h3>
                     <div class="card-body">
-                        <div class="row mb-3 ">
-                            <div class="form-floating col-xl-2 col-md-3 mb-3">
+                        <div class="row mb-3">
+                            <div class="form-floating col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <input type="number" class="form-control" id="minParcela1" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Mínimo valor escolhido aleatoriamente para a Parcela 1 (entre 0 e 99)">
                                 <label for="minParcela1">&nbsp&nbsp Mín. Parcela 1</label>
                             </div>
-                            <div class="form-floating col-xl-2 col-md-3 mb-3">
+                            <div class="form-floating col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <input type="number" class="form-control" id="maxParcela1" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Máximo valor escolhido aleatoriamente para a Parcela 1 (entre 0 e 99)">
                                 <label for="maxParcela1">&nbsp&nbsp Máx. Parcela 1</label>
                             </div>
-                            <div class="col-xl-2 col-md-3 mb-3">
+                            <div class="col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <button type="button" class="btn btn-primary w-100" id="gerarParcela1" onclick="gerarParcela1();">Gerar Parcela 1</button>
                             </div>
-                            <div class="form-floating col-xl-2 col-md-3 mb-3">
+                            <div class="form-floating col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <input type="number" class="form-control" id="parcela1" min="0" max="99" 
                                        onclick="preencherParcela1();" onchange="avaliarLimites();" onkeyup="preencherParcela1();"
                                        title="Valor escolhido para a Parcela 1 (entre 0 e 99)">
@@ -39,20 +39,20 @@
                         </div>
                         
                         <div class="row mb-3">
-                            <div class="form-floating col-xl-2 col-md-3 mb-3">
+                            <div class="form-floating col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <input type="number" class="form-control" id="minParcela2" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Mínimo valor escolhido aleatoriamente para a Parcela 2 (entre 0 e 99)">
                                 <label for="minParcela2">&nbsp&nbsp Mín. Parcela 2</label>
                             </div>
-                            <div class="form-floating col-xl-2 col-md-3 mb-3">
+                            <div class="form-floating col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <input type="number" class="form-control" id="maxParcela2" min="0" max="99" onchange="avaliarLimites();" 
                                        title="Máximo valor escolhido aleatoriamente para a Parcela 2 (entre 0 e 99)">
                                 <label for="minParcela2">&nbsp&nbsp Máx. Parcela 2</label>
                             </div>
-                            <div class="col-xl-2 col-md-3 mb-3">
+                            <div class="col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <button type="button" class="btn btn-primary w-100" id="gerarParcela2" onclick="gerarParcela2();">Gerar Parcela 2</button>
                             </div>
-                            <div class="form-floating col-xl-2 col-md-3 mb-3">
+                            <div class="form-floating col-xl-2 col-md-3 col-sm-6 col-6 mb-3">
                                 <input type="number" class="form-control" id="parcela2" min="0" max="99" 
                                        onclick="preencherParcela2();" onchange="avaliarLimites();" onkeyup="preencherParcela2();"
                                        title="Valor escolhido para a Parcela 2 (entre 0 e 99)">
